:bug: Fix horizontal alignment of app on large screens

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,6 +26,6 @@ body {
 
 @media (min-width: 720px) {
   .content {
-    margin: 0 1em;
+    padding: 0 1em;
   }
 }
